# web-backend

./: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml
alembic/: env.py  script.py.mako
data/: .gitkeep
data/blog_posts/: ai-machine-learning-future.md  blog_20250920_545d.md  blog_20250920_dd6d.md  meta_data.json  nextjs-14-react-18-features.md
media/: .gitkeep
scripts/: copy_data.py
src/: __init__.py  config.py  database.py  dependencies.py  main.py
src/core/: __init__.py
src/core/hskmodel/: __init__.py  model.py
src/core/hskmodel/data/: .gitkeep  chapter_dict.json  header_dict.json  map_dict.json
src/core/hskmodel/util/: __init__.py  module.py  tools.py
src/core/nlp_model/: __init__.py  model.py  services.py
src/core/nlp_model/utils/: __init__.py  util_module.py  util_prompt.py
src/models/: __init__.py  models.py
src/routers/: __init__.py  blog.py  hrjang.py  hskmap.py  lawchaser.py  rara.py
src/schemas/: __init__.py  blog.py  hrjang.py  hskmap.py  lawchaser.py  rara.py
tests/: conftest.py  test_blog.py  test_hrjang.py  test_hskmap.py  test_rara.py
